--- a/backend/utils/emails/template/accountVerification.handlebars
+++ b/backend/utils/emails/template/accountVerification.handlebars
@@ -7,7 +7,7 @@
     <h3>Verify Your Account</h3>
     <p>Hi <b>{{name}}</b>, thanks for registering an account with us.</p>
     <p>Please verify your account by clicking the link 
-        <b><a herf="{{link}}">Login to your account</a></b>
+        <b><a href="{{link}}">verify your account</a></b>
     </p>
     <p>Kindly note that this link will be valid for the next 15 minutes only</p>
 </body>
