--- a/backend/utils/emails/template/welcome.handlebars
+++ b/backend/utils/emails/template/welcome.handlebars
@@ -7,7 +7,7 @@
     <h3>Account verified</h3>
     <p>Hi <b>{{name}}</b>, thanks for verifying your account.</p>
     <p>You can now click this link to 
-        <b><a herf="{{link}}">Login to your account</a></b>
+        <b><a href="{{link}}">Login to your account</a></b>
     </p>
     <p>Hope you find our service of value!</p>
 </body>
